# johnlamp-cmake-tutorial

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  codecov.yml  main.cpp  sonar-project.properties  travis.sh
.github/workflows/: build.yml
ToDoCore/: CMakeLists.txt  ToDo.cpp  ToDo.h
ToDoCore/unit_test/: CMakeLists.txt  ToDoTest.cpp
cmake/: CodeCoverage.cmake  FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake  gmock.cmake  llvm-cov-wrapper
